syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto

package user;

message LoginData {
    string telephone = 1;
    string password = 2;
}

message Session {
    string sess = 1;
}

message UserID {
    int32 id = 1;
}

message User {
    int32 id = 1;
    string name = 2;
    string telephone = 3;
    string password = 4;
    int32 date_birth = 5;
    string sex = 6;
    repeated string linkImages = 7;
    string job = 8;
    string education = 9;
    string aboutMe = 10;
}

message UserFeed {
    int32 id = 1;
    string name = 2;
    int32 date_birth = 3;
    repeated string linkImages = 4;
    string job = 5;
    string education = 6;
    string aboutMe = 7;
}

message UserMe {
    int32 id = 1;
    string name = 2;
    string telephone = 3;
    int32 date_birth = 4;
    repeated string linkImages = 5;
    string job = 6;
    string education = 7;
    string aboutMe = 8;
}

message UserRequest {
    User data = 1;
}

message SettingsRequest {
    int32 id = 1;
    User data = 2;
}

message UserResponse {
    User data = 1;
}

message UserMeResponse {
    UserMe data = 1;
}

message UserFeedResponse {
    UserFeed data = 1;
}

message Nothing {
    bool dummy = 1;
}

message UserIDRequest {
    UserID data = 1;
}

service UserGRPCHandler {
    rpc Login (LoginData) returns (UserResponse) {}
    rpc Logout (Session) returns (Nothing) {}
    rpc Signup (UserRequest) returns (Nothing) {}
    rpc Settings (SettingsRequest) returns (Nothing) {}
    rpc Me (Session) returns (UserMeResponse) {}
    rpc Feed (UserRequest) returns (UserFeedResponse) {}
    rpc UserID (UserIDRequest) returns (UserFeedResponse) {}
    rpc User (Session) returns (UserResponse) {}
}